Bug 1636971 - Load EditorOverride.css in HTMLEditor->Init to fix image styles in editor. r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D79285